@@ -1,3 +1,4 @@
+-- -*-lua-*-
 
 mtn_setup()
 revs = {}
@@ -49,5 +50,5 @@ L("revs.d = ", revs.d, "\n")
 -- REVD: added line
 --
 
-check(mtn("--debug", "annotate", "--brief", "foo"), 0, true, true)
+check(mtn("--debug", "annotate", "--revs-only", "foo"), 0, true, true)
 check(greplines("stdout", {revs.a, revs.a, revs.b, revs.c, revs.a, revs.d}))
